# AeonTerra

./: .gitignore  CMakeLists.txt  Main.cpp  PlanetSimulator.cpp  PlanetVisualizer.cpp  README.md
Core/: CMakeLists.txt  CoreExports.h
Core/Mathematics/: GeoMath.h  Vector3.h
Core/Simulation/: GeologicalTimeline.cpp  GeologicalTimeline.h  PlateTectonics.cpp  PlateTectonics.h
Docs/: DevelopmentRoadmap.md  SystemArchitecture.md
Tools/: CMakeLists.txt  HeightmapGenerator.cpp  HeightmapGenerator.h  TectonicVisualizer.cpp  TectonicVisualizer.h
Tools/WorldBuilder/: PlateGenerator.cpp  PlateGenerator.h
